Issue #257801 - Commit events not shown in activities of project dashboard

--- a/odcs.ui/src/org/netbeans/modules/odcs/ui/project/Bundle.properties
+++ b/odcs.ui/src/org/netbeans/modules/odcs/ui/project/Bundle.properties
@@ -96,3 +96,5 @@ BadRequest.label.text=<Invalid Pattern>
 ServerError.label.text=<Error Connecting Developer Server>
 CTL_AddNew=<html><i>Add New...</i></html>
 LBL_NoDescription=no description
+NewJPanel.jLabel1.text=jLabel1
+NewJPanel.jLabel2.text=jLabel2
