--- a/odcs.ui/src/org/netbeans/modules/odcs/ui/project/activity/Bundle.properties
+++ b/odcs.ui/src/org/netbeans/modules/odcs/ui/project/activity/Bundle.properties
@@ -54,9 +54,25 @@ LBL_Minute=min
 LBL_Sec=sec
 LBL_DurationUnknown=Duration: Unknown
 
+# {0} amount of all commits
+LBL_ShowAllCommits=Show All {0} Commits
+
 # {0} commit Id
-# {1} repository name
-FMT_Committed=Committed {0} into {1} repository
+# {1} commit author - name or email adress
+# {2} commit message
+LBL_CommitDesc={0} (by {1}) {2}
+
+# {0} commit Id
+# {1} branch name
+# {2} repository name
+FMT_PushedOne=pushed {0} to {1} in {2} repository
+# {0} commit count
+# {1} branch name
+# {2} repository name
+FMT_PushedMore=pushed {0} commits to {1} in {2} repository
+# {0} - commit Id
+# {1} - commit message
+FMT_MailToSubject=commit {0} - {1}
 # {0} commit Id (code identifying a commit)
 FMT_CommittedNoRepo=Committed {0} to undefined
 LBL_OpenIDE=Open in IDE
