--- a/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/support/ui/Bundle.properties
+++ b/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/support/ui/Bundle.properties
@@ -125,7 +125,20 @@ CompletionPopup.Waiting=<Waiting autocompletion options...>
 SSHKeyFileChooser.DialogTitle.text=Select SSH Key File
 SSHKeyFileChooser.SSHKeyFileType.text=SSH Private Key File
 AuthenticationSettingsPanel.connectionSettings.text=Connection &Settings
-AuthenticationSettingsPanel.preferredAuthenticationsLabel.text=Preferred Authentications:
-AuthenticationSettingsPanel.upButton.text=Up
-AuthenticationSettingsPanel.downButton.text=Down
-AuthenticationSettingsPanel.timeoutLabel.text=Timeout:
+AuthenticationSettingsPanel.preferredAuthenticationsLabel.text=Pre&ferred Authentications:
+AuthenticationSettingsPanel.upButton.text=&Up
+AuthenticationSettingsPanel.downButton.text=&Down
+AuthenticationSettingsPanel.timeoutLabel.text=&Timeout:
+AuthenticationSettingsPanel.downButton.toolTipText=Move Down
+AuthenticationSettingsPanel.connectionSettings.AccessibleContext.accessibleName=Connection settings
+AuthenticationSettingsPanel.connectionSettings.AccessibleContext.accessibleDescription=Additional connection settings
+AuthenticationSettingsPanel.preferredAuthenticationsLabel.AccessibleContext.accessibleName=Preferred authentications
+AuthenticationSettingsPanel.preferredAuthenticationsLabel.AccessibleContext.accessibleDescription=Preferred authentications order
+AuthenticationSettingsPanel.upButton.AccessibleContext.accessibleName=Up
+AuthenticationSettingsPanel.upButton.AccessibleContext.accessibleDescription=Move authentication up
+AuthenticationSettingsPanel.downButton.AccessibleContext.accessibleName=Down
+AuthenticationSettingsPanel.downButton.AccessibleContext.accessibleDescription=Move authentication down
+AuthenticationSettingsPanel.timeoutLabel.AccessibleContext.accessibleName=Timeout
+AuthenticationSettingsPanel.timeoutLabel.AccessibleContext.accessibleDescription=Connection timeout
+AuthenticationSettingsPanel.timeoutSpinner.AccessibleContext.accessibleName=Timeout
+AuthenticationSettingsPanel.timeoutSpinner.AccessibleContext.accessibleDescription=Connection timeout
