--- a/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/support/ui/Bundle.properties
+++ b/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/support/ui/Bundle.properties
@@ -129,7 +129,7 @@ AuthenticationSettingsPanel.preferredAuthenticationsLabel.text=Pre&ferred Authen
 AuthenticationSettingsPanel.upButton.text=&Up
 AuthenticationSettingsPanel.downButton.text=&Down
 AuthenticationSettingsPanel.timeoutLabel.text=&Timeout:
-AuthenticationSettingsPanel.downButton.toolTipText=Move Down
+AuthenticationSettingsPanel.downButton.toolTipText=Move down
 AuthenticationSettingsPanel.connectionSettings.AccessibleContext.accessibleName=Connection settings
 AuthenticationSettingsPanel.connectionSettings.AccessibleContext.accessibleDescription=Additional connection settings
 AuthenticationSettingsPanel.preferredAuthenticationsLabel.AccessibleContext.accessibleName=Preferred authentications
@@ -142,3 +142,9 @@ AuthenticationSettingsPanel.timeoutLabel.AccessibleContext.accessibleName=Timeou
 AuthenticationSettingsPanel.timeoutLabel.AccessibleContext.accessibleDescription=Connection timeout
 AuthenticationSettingsPanel.timeoutSpinner.AccessibleContext.accessibleName=Timeout
 AuthenticationSettingsPanel.timeoutSpinner.AccessibleContext.accessibleDescription=Connection timeout
+AuthenticationSettingsPanel.connectionSettings.toolTipText=Additional connection settings
+AuthenticationSettingsPanel.timeoutLabel.toolTipText=Connection timeout
+AuthenticationSettingsPanel.preferredAuthenticationsLabel.toolTipText=Preferred authentications order
+AuthenticationSettingsPanel.upButton.toolTipText=Move up
+AuthenticationSettingsPanel.authenticationsList.toolTipText=Preferred authentications order
+AuthenticationSettingsPanel.timeoutSpinner.toolTipText=Connection timeout
