addfix  (fixed conflicting mnemonics)  for #257806 - A11y test failed for newly added host connection settings (transplanted from d154b30c5f4d9e0f5bb722a5871762c78c3e9ee9)

--- a/cnd.remote/src/org/netbeans/modules/cnd/remote/ui/Bundle.properties
+++ b/cnd.remote/src/org/netbeans/modules/cnd/remote/ui/Bundle.properties
@@ -132,4 +132,4 @@ HostPropertiesDialog.cbX11.text=&Enable X11 forwarding
 EditPathMapDialog.restore.text=&Restore Defaults
 HostPropertiesDialog.errorLabel.text=Error
 HostPropertiesDialog.serverRecordPanel.border.title=Miscellaneous
-HostPropertiesDialog.cbACL.text=&Check ACL-based remote file permissions
+HostPropertiesDialog.cbACL.text=Check AC&L-based remote file permissions
