added 'Show More' action into the odcs project dashboard

--- a/odcs.ui/src/org/netbeans/modules/odcs/ui/project/Bundle.properties
+++ b/odcs.ui/src/org/netbeans/modules/odcs/ui/project/Bundle.properties
@@ -60,6 +60,7 @@ RecentActivitiesPanel.lblEmptyContent.text=no recent activities
 RecentActivitiesPanel.lblError.text=Error while loading
 RecentActivitiesPanel.lblLoading.text=Loading Recent Activities...
 RecentActivitiesPanel.lblShow.text=Show:
+RecentActivitiesPanel.lblShowMore.text=Show More
 ActivityPanel.jLabel1.text=details of the activity
 ProjectDetailsTopComponent.jLabel1.text=Project web:
 ProjectDetailsTopComponent.jLabel2.text=Project wiki:
