Add Selection For Next Occurrence and Select All Occurrences actions

--- a/editor.search/src/org/netbeans/modules/editor/search/actions/Bundle.properties
+++ b/editor.search/src/org/netbeans/modules/editor/search/actions/Bundle.properties
@@ -6,3 +6,5 @@ find-next=Find Next Occurrence
 find-previous=Find Previous Occurrence
 find-selection=Find Selection
 toggle-highlight-search=Toggle Highlight Search
+addCaretSelectNext=Add Selection For Next Occurrence
+addCaretSelectAll=Select All Occurrences
