--- a/docker.api/nbproject/project.properties
+++ b/docker.api/nbproject/project.properties
@@ -44,3 +44,5 @@
 is.autoload=true
 javac.compilerargs=-Xlint -Xlint:-serial
 javac.source=1.8
+
+release.external/juds-0.94.jar=modules/ext/juds-0.94.jar
