Api review preparations

--- a/editor.actions/src/org/netbeans/modules/editor/actions/Bundle.properties
+++ b/editor.actions/src/org/netbeans/modules/editor/actions/Bundle.properties
@@ -72,3 +72,5 @@ selection-previous-word=Extend Selection to Previous Word
 toggle-lines-view=Show &Indent Guide Lines
 remove-last-caret=Remove Last Caret
 remove-last-caret_menu_text=Remove Last Caret
+add-selection-else-caret-up=Duplicate Insertion Point Up
+add-selection-else-caret-down=Duplicate Insertion Point Down
