--- a/docker.ui/src/org/netbeans/modules/docker/ui/wizard/Bundle.properties
+++ b/docker.ui/src/org/netbeans/modules/docker/ui/wizard/Bundle.properties
@@ -5,7 +5,6 @@ ConfigurationPanel.browseButton.text=&Browse...
 ConfigurationPanel.certDirectoryLabel.text=&Cerificates Path:
 ConfigurationPanel.urlLabel.text=&URL:
 ConfigurationLinuxPanel.nameLabel.text=&Name:
-ConfigurationLinuxPanel.browseButton.text=&Browse...
 ConfigurationLinuxPanel.certDirectoryLabel.text=&Cerificates Path:
 ConfigurationLinuxPanel.urlLabel.text=&URL:
 ConfigurationLinuxPanel.socketBrowseButton.text=B&rowse...
@@ -13,3 +12,4 @@ ConfigurationLinuxPanel.socketLabel.text=&Socket:
 ConfigurationLinuxPanel.socketRadioButton.text=&Unix Socket:
 ConfigurationLinuxPanel.urlRadioButton.text=&TCP Connection
 DockerConnectionVisual.explanationLabel.text=<html>The docker deamon must be configured to listen on TCP socket. You can do so by starting it with -H tcp://127.0.0.1:2375. See the Docker documentation for reference.</html>
+ConfigurationLinuxPanel.certBrowseButton.text=&Browse...
