avoiding endless recursive folder copying if a project directory is added in New ODCS Project wizard

--- a/odcs.ui/src/org/netbeans/modules/odcs/ui/Bundle.properties
+++ b/odcs.ui/src/org/netbeans/modules/odcs/ui/Bundle.properties
@@ -68,7 +68,7 @@ SummaryWizardPanelGUI.localRoot.text=new location
 SummaryWizardPanelGUI.projectsMoveLabel.text=\u2022 Projects/Folders will be moved to a new location:
 SummaryWizardPanelGUI.tobeSharedLabel.text=\u2022 The following projects/files will be shared on Team Server:
 SummaryWizardPanelGUI.projectCreatedLabel.text=\u2022 The project "{0}" will be created on the server "{1}"
-SummaryWizardPanelGUI.repoLabel.text=\u2022 A new repository will be created for project sources.
+SummaryWizardPanelGUI.repoLabel.text=\u2022 A new remote repository will be created for project sources
 SummaryWizardPanelGUI.commitPrepareLabel.text=<html>\u2022 The sources for your project will be prepared for commit into the repository</html>
 SummaryWizardPanelGUI.projectsMoveLabelNoSelection.text=\u2022 A new local repository for your project and sources will be created in the following location:
 
