--- a/docker.ui/src/org/netbeans/modules/docker/ui/wizard/Bundle.properties
+++ b/docker.ui/src/org/netbeans/modules/docker/ui/wizard/Bundle.properties
@@ -12,4 +12,4 @@ ConfigurationLinuxPanel.socketLabel.text=&Socket:
 ConfigurationLinuxPanel.socketRadioButton.text=&Unix Socket:
 ConfigurationLinuxPanel.urlRadioButton.text=&TCP Connection
 ConfigurationLinuxPanel.certBrowseButton.text=&Browse...
-DockerConnectionVisual.testButton.text=Test &Connection
+DockerConnectionVisual.testButton.text=&Test Connection
