#189814 - Allow the Spellchecker to also spell check comments
Patch contributed by junichi11@netbeans.org. Patch has been slighly improved.

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -972,6 +972,7 @@ nb.cluster.php=\
         php.zend,\
         php.zend2,\
         selenium2.php,\
+        spellchecker.bindings.php,\
         websvc.saas.codegen.php
 validation.nb.cluster.php=\
         php.editor
