fixed Bug #257251 - java.io.FileNotFoundException: Path is not absolute: ~/2015

--- a/terminal/src/org/netbeans/modules/terminal/Bundle.properties
+++ b/terminal/src/org/netbeans/modules/terminal/Bundle.properties
@@ -69,6 +69,8 @@ MNM_preview=P
 KW_TerminalOptions=Terminal Options,Terminal Colors
 KW_TerminalOptions2=Terminal, Terminal Options, Terminal Colors
 
+ERR_RelativeDir=Path must be absolute
+
 TermOptionsPanel.backgroundLabel.text=&Background Color:
 TermOptionsPanel.clickToTypeCheckBox.text=&Click To Type
 TermOptionsPanel.descriptionLabel.text=Options governing Terminal windows
@@ -105,3 +107,4 @@ PinPanel.customCheckBox.AccessibleContext.accessibleDescription=Use custom title
 PinPanel.envLabel.AccessibleContext.accessibleDescription=Host
 PinPanel.titleLabel.AccessibleContext.accessibleDescription=Title
 PinPanel.directoryLabel.AccessibleContext.accessibleDescription=Directory
+PinPanel.statusLabel.text=\ 
