--- a/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/deploy/Bundle.properties
+++ b/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/deploy/Bundle.properties
@@ -43,7 +43,9 @@ MSG_Deployment_Completed=Deployment completed.
 MSG_Deployment_Failed_With_Message=Deployment failed. Message was: {0}
 MSG_Deployment_Failed_Timeout=Deployment failed. The timeout expired.
 MSG_Deployment_Failed_Interrupted=Deployment failed. The deployment was interrupted.
+MSG_Deployment_Failed_No_Target=The target {0} does not exists on the server.
 MSG_Deploying=Deploying {0}
+MSG_SearchingTargets=Searching for deployment targets
 
 MSG_Redeployment_Started=Application redeployment started.
 MSG_Redeployment_Failed=Redeployment failed. The message was: {0}
