#257949: debugger.jpda.js module is split into UI and non-UI parts.

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -589,6 +589,7 @@ nb.cluster.java=\
         debugger.jpda,\
         debugger.jpda.ant,\
         debugger.jpda.js,\
+        debugger.jpda.jsui,\
         debugger.jpda.kit,\
         debugger.jpda.projects,\
         debugger.jpda.projectsui,\
