fixed Bug #252516 Wrong rpath option added when link libraries added using "Add Project"

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
@@ -261,13 +261,22 @@ AssignNameHint=Assign name (-h <Output>)
 AdditionalLibraryDirectoriesTxt=Additional Library Directories
 AdditionalLibraryDirectoriesHint=Additional library directories (-L)
 RuntimeSearchDirectoriesTxt=Runtime Search Directories
-RuntimeSearchDirectoriesHint=Runtime search directories (-R)
+RuntimeSearchDirectoriesHint=Runtime search directories (<code>-R</code> or <code>-Wl,-rpath</code> linker options).<br>\
+Makes sense on Unix only.
 LibrariesTxt1=Libraries
 LibrariesHint=Libraries
 LibrariesTxt2=Libraries:
 AllOptionsTxt2=All Options:
 MakefileTxt=Makefile
 MakefileHint=Makefile
+SEARCH_PATH_NONE=Do not Add
+SEARCH_PATH_RELATIVE_TO_WORKING_DIR=Relative to Run Directory
+SEARCH_PATH_RELATIVE_TO_BINARY=Relative to Binary
+SEARCH_PATH_ABSOLUTE=Absolute
+RunTimeSerchPathTxt= Runtime Library Search Path
+RunTimeSerchPathHint=Adds runtime library search path for dependent shared libraries.<br>\
+Adds <code>-R</code> or <code>-Wl,-rpath</code> linker option.<br>\
+Makes sense on Unix only.
 
 #Pre-Build Configuration
 PreBuildTxt=Pre-Build
