#257949: javascript.v8debug module is split into UI and non-UI parts.

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -1438,6 +1438,7 @@ nb.cluster.webcommon=\
         javascript.karma,\
         javascript.nodejs,\
         javascript.v8debug,\
+        javascript.v8debug.ui,\
         languages.apacheconf,\
         languages.ini,\
         lib.v8debug,\
