--- a/javascript.v8debug.ui/build.xml
+++ b/javascript.v8debug.ui/build.xml
@@ -2,7 +2,7 @@
 <!--
 DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-Copyright 1997-2014 Oracle and/or its affiliates. All rights reserved.
+Copyright 1997-2016 Oracle and/or its affiliates. All rights reserved.
 
 Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 Other names may be trademarks of their respective owners.
@@ -43,45 +43,8 @@ However, if you add GPL Version 2 code and therefore, elected the GPL
 Version 2 license, then the option applies only if the new code is
 made subject to such option by the copyright holder.
 -->
-<project xmlns="http://www.netbeans.org/ns/project/1">
-    <type>org.netbeans.modules.apisupport.project</type>
-    <configuration>
-        <data xmlns="http://www.netbeans.org/ns/nb-module-project/3">
-            <code-name-base>org.netbeans.lib.v8debug</code-name-base>
-            <module-dependencies>
-                <dependency>
-                    <code-name-base>org.netbeans.libs.json_simple</code-name-base>
-                    <build-prerequisite/>
-                    <compile-dependency/>
-                    <run-dependency>
-                        <release-version>1</release-version>
-                        <specification-version>0.10</specification-version>
-                    </run-dependency>
-                </dependency>
-            </module-dependencies>
-            <test-dependencies>
-                <test-type>
-                    <name>unit</name>
-                    <test-dependency>
-                        <code-name-base>org.netbeans.libs.junit4</code-name-base>
-                        <compile-dependency/>
-                    </test-dependency>
-                    <test-dependency>
-                        <code-name-base>org.netbeans.modules.nbjunit</code-name-base>
-                        <recursive/>
-                        <compile-dependency/>
-                    </test-dependency>
-                </test-type>
-            </test-dependencies>
-            <friend-packages>
-                <friend>org.netbeans.modules.javascript.v8debug</friend>
-                <friend>org.netbeans.modules.javascript.v8debug.ui</friend>
-                <package>org.netbeans.lib.v8debug</package>
-                <package>org.netbeans.lib.v8debug.commands</package>
-                <package>org.netbeans.lib.v8debug.connection</package>
-                <package>org.netbeans.lib.v8debug.events</package>
-                <package>org.netbeans.lib.v8debug.vars</package>
-            </friend-packages>
-        </data>
-    </configuration>
+
+<project name="javascript.v8debug.ui" default="netbeans" basedir=".">
+    <import file="../nbbuild/templates/projectized.xml"/>
 </project>
+
