--- a/javascript.v8debug.ui/nbproject/project.properties
+++ b/javascript.v8debug.ui/nbproject/project.properties
@@ -1,6 +1,6 @@
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright 1997-2014 Oracle and/or its affiliates. All rights reserved.
+# Copyright 1997-2016 Oracle and/or its affiliates. All rights reserved.
 #
 # Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 # Other names may be trademarks of their respective owners.
@@ -43,5 +43,5 @@
 javac.source=1.8
 javadoc.arch=${basedir}/arch.xml
 
-is.autoload=true
-spec.version.base=1.12.0
+is.eager=true
+spec.version.base=1.0.0
