--- a/javascript.v8debug.ui/src/org/netbeans/modules/javascript/v8debug/ui/Bundle.properties
+++ b/javascript.v8debug.ui/src/org/netbeans/modules/javascript/v8debug/ui/Bundle.properties
@@ -1,6 +1,6 @@
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright 1997-2014 Oracle and/or its affiliates. All rights reserved.
+# Copyright 2016 Oracle and/or its affiliates. All rights reserved.
 #
 # Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 # Other names may be trademarks of their respective owners.
@@ -22,13 +22,7 @@
 # License Header, with the fields enclosed by brackets [] replaced by
 # your own identifying information:
 # "Portions Copyrighted [year] [name of copyright owner]"
-#
-# Contributor(s):
-#
-# The Original Software is NetBeans. The Initial Developer of the Original
-# Software is Sun Microsystems, Inc. Portions Copyright 1997-2006 Sun
-# Microsystems, Inc. All Rights Reserved.
-#
+# 
 # If you wish your version of this file to be governed by only the CDDL
 # or only the GPL Version 2, indicate your decision by adding
 # "[Contributor] elects to include this software in this distribution
@@ -39,9 +33,13 @@
 # However, if you add GPL Version 2 code and therefore, elected the GPL
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
+# 
+# Contributor(s):
+#
+#
+# Portions Copyrighted 2008 Sun Microsystems, Inc.
 
-javac.source=1.8
-javadoc.arch=${basedir}/arch.xml
+OpenIDE-Module-Name=JavaScript V8 Debugger UI
+OpenIDE-Module-Short-Description=UI for JavaScript debugger via V8 debug protocol
+OpenIDE-Module-Long-Description=UI for JavaScript debugger via V8 debug protocol
 
-is.autoload=true
-spec.version.base=1.12.0
