Do the consistent redeployment on incremental deployment.

--- a/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/deploy/Bundle.properties
+++ b/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/deploy/Bundle.properties
@@ -44,7 +44,7 @@ MSG_Deployment_Failed_With_Message=Deployment failed. Message was: {0}
 MSG_Deployment_Failed_Timeout=Deployment failed. The timeout expired.
 MSG_Deployment_Failed_Interrupted=Deployment failed. The deployment was interrupted.
 MSG_Deploying=Deploying {0}
-MSG_SearchingTargets=Searching for deployment targets
+MSG_SearchingTargets=Searching for deployment targets: {0}
 
 MSG_Failed_No_Target=Some of specified targets does not exists on the server.
 
