--- a/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/Bundle.properties
+++ b/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/Bundle.properties
@@ -141,7 +141,7 @@ MSG_InPlaceDeployment=In-place deployment at {0}
 
 MSG_Redeploying=Redeploying {0}
 
-MSG_Distributing=Distributing {0} to {1}
+MSG_Distributing=Distributing {0}
 
 MSG_DeployFailed=Deployment failed\: {0}
 
