fixed Bug #257920 Support editing C/C++ License Headers from Options

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
@@ -64,6 +64,7 @@ LBL_PARSER_NODE=Code Assistance
 LBL_PACKAGING_NODE=Packaging
 LBL_QT_NODE=Qt
 LBL_Formatting=Formatting
+LBL_License=License Headers
 
 # Property Window
 CONFIGURATIONS_EDITOR_TITLE=Configurations
