Better messages; do not do useless calls.

--- a/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/config/Bundle.properties
+++ b/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/config/Bundle.properties
@@ -65,9 +65,9 @@ an inconsistent state. Do you want to proceed anyway?
 MSG_CannotUpdate=Cannot update a configuration file.
 MSG_FailedToCreateConfigFolder=The {0} folder could not be created.
 
-MSG_FailedToDeployDatasource=One or more datasources could not be deployed. Check project configuration.
-MSG_FailedToDeployLibrary=One or more libraries could not be deployed. Check project configuration.
-MSG_FailedToDeployJMS=One or more JMS resources could not be deployed. Check project configuration.
+MSG_FailedToDeployDatasource=One or more datasources could not be deployed. Server message is: {0}.
+MSG_FailedToDeployLibrary=One or more libraries could not be deployed. Server message is: {0}.
+MSG_FailedToDeployJMS=One or more JMS resources could not be deployed. Server message is: {0}.
 
 MSG_CannotReadServerLibraries=Cannot read the server libraries value because the {0} file is not parsable.
 MSG_DidNotFindServerLibraries=Some server libraries were not found on server or deployed.
