Additional fix for Bug #257251 - java.io.FileNotFoundException: Path is not absolute: ~/2015

--- a/terminal/src/org/netbeans/modules/terminal/Bundle.properties
+++ b/terminal/src/org/netbeans/modules/terminal/Bundle.properties
@@ -69,7 +69,7 @@ MNM_preview=P
 KW_TerminalOptions=Terminal Options,Terminal Colors
 KW_TerminalOptions2=Terminal, Terminal Options, Terminal Colors
 
-ERR_RelativeDir=Path must be absolute
+ERR_RelativeDir=Invalid path
 
 TermOptionsPanel.backgroundLabel.text=&Background Color:
 TermOptionsPanel.clickToTypeCheckBox.text=&Click To Type
