--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/configurations/ui/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/configurations/ui/Bundle.properties
@@ -532,3 +532,10 @@ MacroExpandedEditorPanel.previewLabel.text=Preview:
 #Platform specific configuration
 PlatformSpecificFalse=Platform independent configuration
 PlatformSpecificTrue=Configuration for {0}
+
+#License Headers
+LicenseHeadersPanel.rbGlobal.text=Use global license
+LicenseHeadersPanel.lblLicense.text=License header
+LicenseHeadersPanel.btnProject.text=Browse...
+LicenseHeadersPanel.btnGlobal.text=Edit global licenses
+LicenseHeadersPanel.rbProject.text=Use project location
