Initial JShell integration

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -661,14 +661,17 @@ nb.cluster.java=\
         javaee.injection,\
         javawebstart,\
         jellytools.java,\
+	jshell.support,\
         junit,\
         junit.ant,\
         junit.ant.ui,\
         junit.ui,\
         lib.nbjavac,\
+	lib.nbjshell,\
         libs.cglib,\
         libs.javacapi,\
         libs.javacimpl,\
+	libs.jshell,\
         libs.springframework,\
         maven,\
         maven.checkstyle,\
