#257988:Go to symbol misleads user by showing "No symbols found" for long period

--- a/jumpto/src/org/netbeans/modules/jumpto/symbol/Bundle.properties
+++ b/jumpto/src/org/netbeans/modules/jumpto/symbol/Bundle.properties
@@ -50,3 +50,4 @@ LBL_GoToSymbol_LocationJLabel=Location:
 CTL_CaseSensitive=&Case Sensitive
 AD_CaseSensitive=Case Sensitive
 MSG_DeclaredIn=in {0}
+TXT_PartialResults=Partial results, Searching...
