--- a/cordova/src/org/netbeans/modules/cordova/options/Bundle.properties
+++ b/cordova/src/org/netbeans/modules/cordova/options/Bundle.properties
@@ -9,3 +9,6 @@ MobilePlatformsPanel.envVarWarnLabel.text=<html><i>Please set <b>ANDROID_HOME</b
 LBL_Cordova_Version=<html>Installed <b>Cordova</b> version: <i>{0}</i></html>
 LBL_Cordova_Not_Found=<html>NetBeans could not find <b>cordova</b> on your PATH. Please install <b>cordova</b>.</html>
 KW.MobilePlatformsPanel=javascript,mobile platforms,android,cordova
+MobilePlatformsPanel.cordovaVersionBrowse.text=&Browse
+MobilePlatformsPanel.cordovaPathLabel.text=Path to the Cordova executable:
+MobilePlatformsPanel.cordovaPathDescLabel.text=Optional; Specify if not set on PATH. (e.g. /usr/local/bin)
