Fixed tests for JDK8 - include tools.jar

--- a/java.hints/nbproject/project.properties
+++ b/java.hints/nbproject/project.properties
@@ -101,3 +101,5 @@ test.config.commit.includes=\
     org/netbeans/modules/java/hints/bugs/CollectionRemoveTest.class
 
 test.runner=junit
+
+test-unit-sys-prop.hints-tools.jar.location=${tools.jar}
