Add possibility to run test using 'phpunit' command only
Some projects run tests simply by running this command, without any parameters.

--- a/php.phpunit/src/org/netbeans/modules/php/phpunit/ui/customizer/Bundle.properties
+++ b/php.phpunit/src/org/netbeans/modules/php/phpunit/ui/customizer/Bundle.properties
@@ -1,6 +1,6 @@
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright 2013 Oracle and/or its affiliates. All rights reserved.
+# Copyright 2016 Oracle and/or its affiliates. All rights reserved.
 #
 # Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 # Other names may be trademarks of their respective owners.
@@ -36,7 +36,7 @@
 #
 # Contributor(s):
 #
-# Portions Copyrighted 2013 Sun Microsystems, Inc.
+# Portions Copyrighted 2016 Sun Microsystems, Inc.
 
 CustomizerPhpUnit.bootstrapCheckBox.text=&Use Bootstrap
 CustomizerPhpUnit.bootstrapLabel.text=&Bootstrap:
@@ -50,7 +50,7 @@ CustomizerPhpUnit.bootstrapBrowseButton.text=&Browse...
 CustomizerPhpUnit.bootstrapGenerateButton.text=&Generate
 CustomizerPhpUnit.configurationBrowseButton.text=Bro&wse...
 CustomizerPhpUnit.configurationGenerateButton.text=Ge&nerate
-CustomizerPhpUnit.runTestUsingUnitCheckBox.text=&Run All *Test Files Using PHPUnit
+CustomizerPhpUnit.runTestUsingUnitCheckBox.text=&Run All *Test.php Files in Project Using PHPUnit
 CustomizerPhpUnit.suiteInfoLabel.AccessibleContext.accessibleDescription=Select a file which you want to use for running all PHPUnit tests.
 CustomizerPhpUnit.suiteTextField.AccessibleContext.accessibleDescription=File path of custom test suite.
 CustomizerPhpUnit.suiteTextField.AccessibleContext.accessibleName=Custom Test Suite
@@ -89,3 +89,4 @@ CustomizerPhpUnit.askForTestGroupsCheckBox.text=&Ask for Test Groups Before Runn
 CustomizerPhpUnit.scriptCheckBox.text=Use Custom PHPUnit Script
 CustomizerPhpUnit.scriptLabel.text=PHPUnit Script:
 CustomizerPhpUnit.scriptBrowseButton.text=Brow&se...
+CustomizerPhpUnit.runPhpUnitOnlyCheckBox.text=&Test Project Using Just 'phpunit' Command
