New version of com.oracle.js.parser

--- a/libs.nashorn/nbproject/project.properties
+++ b/libs.nashorn/nbproject/project.properties
@@ -43,4 +43,4 @@
 javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
 is.autoload=true
-release.external/com.oracle.truffle.js.parser.jar=modules/ext/com.oracle.truffle.js.parser.jar
+release.external/com.oracle.js.parser.jar=modules/ext/com.oracle.js.parser.jar
