Update module description

--- a/php.symfony/src/org/netbeans/modules/php/symfony/resources/Bundle.properties
+++ b/php.symfony/src/org/netbeans/modules/php/symfony/resources/Bundle.properties
@@ -40,9 +40,9 @@
 
 OpenIDE-Module-Display-Category=PHP
 OpenIDE-Module-Long-Description=\
-    Support for Symfony Framework, version 1.
-OpenIDE-Module-Name=Symfony Framework
-OpenIDE-Module-Short-Description=Support for Symfony Framework (version 1)
+    Legacy support for Symfony Framework, version 1.
+OpenIDE-Module-Name=Symfony Framework (legacy)
+OpenIDE-Module-Short-Description=Legacy support for Symfony Framework (version 1)
 
 # options export/import
 LBL_SymfonyExportName=Symfony
