--- a/html.ojet/nbproject/project.properties
+++ b/html.ojet/nbproject/project.properties
@@ -1,9 +1,9 @@
 javac.source=1.7
 javac.compilerargs=-Xlint -Xlint:-serial
 
-extra.module.files=docs/ojetdocs-1_0_0.zip, docs/ojetdocs-1_1_2.zip, docs/ojetdocs-1_2_0-Dev10192015.zip
+extra.module.files=docs/ojetdocs-1_0_0.zip, docs/ojetdocs-1_1_2.zip, docs/ojetdocs-2_0_0.zip
 jnlp.indirect.jars=docs/*.zip
 release.external/ojetdocs-1_0_0.zip=docs/ojetdocs-1_0_0.zip
 release.external/ojetdocs-1_1_2.zip=docs/ojetdocs-1_1_2.zip
-release.external/ojetdocs-1_2_0-Dev10192015.zip=docs/ojetdocs-1_2_0-Dev10192015.zip
+release.external/ojetdocs-2_0_0.zip=docs/ojetdocs-2_0_0.zip
 
