--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
@@ -302,3 +302,5 @@ FmtAlignment.nlWhileCheckBox.AccessibleContext.accessibleDescription=set new lin
 FmtAlignment.nlFinallyCheckBox.AccessibleContext.accessibleDescription=set new lines for finally
 FmtAlignment.AccessibleContext.accessibleDescription=Alignments and New Lines formatting settings form
 FmtAlignment.AccessibleContext.accessibleName=Alignment and new lines settings form
+FmtWrapping.classesLabel.text=&Classes:
+FmtWrapping.elementsLabel.text=Class &Elements:
