Resolved javac linkage error in tests when trying to link javacimpl from jdk9 with javacapi from jdk8.

--- a/java.project.ui/nbproject/project.properties
+++ b/java.project.ui/nbproject/project.properties
@@ -47,6 +47,7 @@ javac.source=1.7
 javadoc.overview=${basedir}/overview.html
 javadoc.arch=${basedir}/arch.xml
 javadoc.apichanges=${basedir}/apichanges.xml
+requires.nb.javac=true
 
 # masterfs needed for the usual reasons; tools.jar needed for Ant's <javac> to work
 test.unit.run.cp.extra=${tools.jar}
