Fixing Bug #255959 - Dynamic Libraries Not Found for Sample Projects

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
@@ -277,6 +277,8 @@ RunTimeSerchPathTxt= Runtime Library Search Path
 RunTimeSerchPathHint=Adds runtime library search path for dependent shared libraries.<br>\
 Adds <code>-R</code> or <code>-Wl,-rpath</code> linker option.<br>\
 Makes sense on Unix only.
+CopyLibrariesTxt=Copy shared libraries
+CopyLibrariesHint=Copies dependent shared libraries (e.g., from subprojects) to the output directory.
 
 #Pre-Build Configuration
 PreBuildTxt=Pre-Build
