Class declaration braces formatting.

--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
@@ -304,3 +304,4 @@ FmtAlignment.AccessibleContext.accessibleDescription=Alignments and New Lines fo
 FmtAlignment.AccessibleContext.accessibleName=Alignment and new lines settings form
 FmtWrapping.classesLabel.text=&Classes:
 FmtWrapping.elementsLabel.text=Class &Elements:
+FmtBraces.classDeclLabel.text=&Class Declaration:
