Class extends formatting; one test failing.

--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
@@ -305,3 +305,4 @@ FmtAlignment.AccessibleContext.accessibleName=Alignment and new lines settings f
 FmtWrapping.classesLabel.text=&Classes:
 FmtWrapping.elementsLabel.text=Class &Elements:
 FmtBraces.classDeclLabel.text=&Class Declaration:
+FmtWrapping.classExtendsLabel.text=&Extends Keyword:
