Moving selected classpath items to modulepath when creating module-info.java.

--- a/java.project.ui/src/org/netbeans/modules/java/project/ui/Bundle.properties
+++ b/java.project.ui/src/org/netbeans/modules/java/project/ui/Bundle.properties
@@ -72,6 +72,12 @@ ERR_JavaTargetChooser_InvalidFolder=The Package is not a folder
 INFO_JavaTargetChooser_ProvideClassName=Provide valid Java Class name
 INFO_JavaTargetChooser_ProvidePackageName=Provide valid Java Package name
 
+# MoveToModulePathPanelGUI
+LBL_MoveToModulePathPanelGUI_Name=Modulepath
+MoveToModulePathPanelGUI.table.columnModel.title1=Move to modulepath
+MoveToModulePathPanelGUI.table.columnModel.title0=Classpath entries
+MSG_ProjectArtifactFormat={0} - {1}
+
 # copied from project/ui/Bundle
 MSG_fs_or_folder_does_not_exist=The target folder does not exist.
 MSG_fs_is_readonly=The target folder is read-only.
