#258345 - 'vendor' directory always ignored
Composer part.

--- a/php.composer/src/org/netbeans/modules/php/composer/ui/options/Bundle.properties
+++ b/php.composer/src/org/netbeans/modules/php/composer/ui/options/Bundle.properties
@@ -1,6 +1,6 @@
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright 2012 Oracle and/or its affiliates. All rights reserved.
+# Copyright 2016 Oracle and/or its affiliates. All rights reserved.
 #
 # Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 # Other names may be trademarks of their respective owners.
@@ -36,7 +36,7 @@
 #
 # Contributor(s):
 #
-# Portions Copyrighted 2012 Sun Microsystems, Inc.
+# Portions Copyrighted 2016 Sun Microsystems, Inc.
 
 # controller
 Options.name=Composer
@@ -51,3 +51,4 @@ ComposerOptionsPanel.learnMoreLabel.text=<html><a href="#">Learn more</a>
 ComposerOptionsPanel.authorNameLabel.text=A&uthor name:
 ComposerOptionsPanel.authorEmailLabel.text=Au&thor e-mail:
 ComposerOptionsPanel.vendorLabel.text=&Vendor:
+ComposerOptionsPanel.ignoreVendorCheckBox.text=&Ignore 'vendor' directory from versioning
