#258345 cont'd - 'vendor' directory always ignored
Bower part.

--- a/javascript.bower/src/org/netbeans/modules/javascript/bower/ui/options/Bundle.properties
+++ b/javascript.bower/src/org/netbeans/modules/javascript/bower/ui/options/Bundle.properties
@@ -1,6 +1,6 @@
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright 2014 Oracle and/or its affiliates. All rights reserved.
+# Copyright 2016 Oracle and/or its affiliates. All rights reserved.
 #
 # Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 # Other names may be trademarks of their respective owners.
@@ -36,10 +36,11 @@
 #
 # Contributor(s):
 #
-# Portions Copyrighted 2014 Sun Microsystems, Inc.
+# Portions Copyrighted 2016 Sun Microsystems, Inc.
 
 BowerOptionsPanel.bowerjLabel.text=&Bower Path:
 BowerOptionsPanel.bowerBrowseButton.text=B&rowse...
 BowerOptionsPanel.bowerSearchButton.text=&Search...
 BowerOptionsPanel.installLabel.text=<html><a href="#">Install Bower</a>
+BowerOptionsPanel.ignoreBowerComponentsCheckBox.text=&Ignore 'bower_components' directory from versioning
 KW.BowerOptionsPanel=javascript,bower
