#258345 cont'd - 'vendor' directory always ignored
npm part.

--- a/javascript.nodejs/src/org/netbeans/modules/javascript/nodejs/ui/options/Bundle.properties
+++ b/javascript.nodejs/src/org/netbeans/modules/javascript/nodejs/ui/options/Bundle.properties
@@ -1,6 +1,6 @@
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright 2014 Oracle and/or its affiliates. All rights reserved.
+# Copyright 2016 Oracle and/or its affiliates. All rights reserved.
 #
 # Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 # Other names may be trademarks of their respective owners.
@@ -36,12 +36,13 @@
 #
 # Contributor(s):
 #
-# Portions Copyrighted 2014 Sun Microsystems, Inc.
+# Portions Copyrighted 2016 Sun Microsystems, Inc.
 
 NodeJsOptionsPanel.npmHeaderLabel.text=npm
 NodeJsOptionsPanel.npmLabel.text=n&pm Path:
 NodeJsOptionsPanel.npmBrowseButton.text=B&rowse...
 NodeJsOptionsPanel.npmSearchButton.text=S&earch...
+NodeJsOptionsPanel.npmIgnoreNodeModulesCheckBox.text=&Ignore 'node_modules' directory from versioning
 NodeJsOptionsPanel.expressHeaderLabel.text=Express Generator
 NodeJsOptionsPanel.expressLabel.text=&Express Path:
 NodeJsOptionsPanel.expressBrowseButton.text=Bro&wse...
