#247971:Embedded newlines in VM properties

--- a/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/Bundle.properties
+++ b/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/Bundle.properties
@@ -183,7 +183,7 @@ LBL_CustomizeRun_Run_Working_Directory_Browse=Brow&se...
 LBL_CustomizeRun_Run_Working_Directory_Browse_Title=Browse Working Directory
 LBL_CustomizeRun_Run_VM_Options=&VM Options:
 LBL_CustomizeRun_Run_VM_Options_Example=(e.g. -Xms10m)
-LBL_CustomizeRun_Run_VM_Options_JButton=C&ustomize
+LBL_CustomizeRun_Run_VM_Options_JButton=C&ustomize...
 LBL_ChooseMainClass_OK=Select Main Class
 LBL_ChooseMainClass_Title=Browse Main Classes
 
