#257849: Adding the xhr4j module of HTML/Java to simplify access to pages protected by CORS

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -264,6 +264,7 @@ nb.cluster.platform=\
         o.jdesktop.layout,\
         o.n.core,\
         o.n.html.ko4j,\
+        o.n.html.xhr4j,\
         o.n.swing.outline,\
         o.n.swing.plaf,\
         o.n.swing.tabcontrol,\
