--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
@@ -86,6 +86,7 @@ LBL_spaceAroundUnaryOps=Unary Operators
 LBL_spaceAroundBinaryOps=Binary Operators
 LBL_spaceAroundTernaryOps=Ternary Operators
 LBL_spaceAroundAssignOps=Assignment Operators
+LBL_spaceAroundArrowOps=Arrow Operator
 LBL_spaceAroundKeyValueOps=Key => Value Operator
 LBL_spaceAroundObjectOps=Object Operator
 LBL_spaceAroundStringConcatOps=String Concatenation Operator
@@ -306,3 +307,4 @@ FmtWrapping.classesLabel.text=&Classes:
 FmtWrapping.elementsLabel.text=Class &Elements:
 FmtBraces.classDeclLabel.text=&Class Declaration:
 FmtWrapping.classExtendsLabel.text=&Extends Keyword:
+FmtWrapping.arrowOpsLabel.text=Arro&w Operator:
