fixed Bug #258209 Help to set path to the cmake binary (to be used by NB) - fix spelling

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/Bundle.properties
@@ -311,7 +311,7 @@ MAKEFILE_RADIO_BUTTON_MN=M
 CONFIGURE_RADIO_BUTTON_MN=C
 MakefileOrConfigureInstructions=Select checkbox to use a tool to auto generate build script (i.e. Makefile).\nMacros ${IDE_CC} and ${IDE_CXX} will be expanded to compiler paths.
 NOMAKEFILE=No makefile specified
-NOTFOUNDCONFIGUREFILE=Script "{0}" is not found or cannot be processed by tool collection {1}
+NOTFOUNDCONFIGUREFILE=Script "{0}" is not found or "{1}" tool collection is not configured to process it
 NOCONFIGUREFILE=No configure script specified
 MAKEFILEDOESNOTEXIST=Makefile does not exist
 CONFIGUREFILEDOESNOTEXIST=Script does not exist
