Separating JS doc api.

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -412,6 +412,7 @@ nb.cluster.ide=\
         image,\
         javascript2.debug,\
         javascript2.debug.ui,\
+        javascript2.doc,\
         javascript2.editor,\
         javascript2.extjs,\
 	javascript2.jade,\
