--- a/debugger.jpda.projectsui/src/org/netbeans/modules/debugger/jpda/projectsui/Bundle.properties
+++ b/debugger.jpda.projectsui/src/org/netbeans/modules/debugger/jpda/projectsui/Bundle.properties
@@ -66,6 +66,7 @@ TOOLTIP_DISABLED_METHOD_BREAKPOINT=Disabled Method Breakpoint
 TOOLTIP_CLASS_BREAKPOINT=Class Breakpoint
 TOOLTIP_DISABLED_CLASS_BREAKPOINT=Disabled Class Breakpoint
 TOOLTIP_BREAKPOINT_STROKE=Deactivated breakpoint
+TOOLTIP_WATCH_PIN=Watch
 # A condition expression follows this message on a next line
 TOOLTIP_CONDITION=Hits when:
 # {0} - a number
