--- a/java.api.common/nbproject/project.properties
+++ b/java.api.common/nbproject/project.properties
@@ -1,7 +1,7 @@
 is.autoload=true
 javac.compilerargs=-Xlint -Xlint:-serial
 javac.source=1.8
-
+requires.nb.javac=true
 javadoc.apichanges=${basedir}/apichanges.xml
 
 test.config.stableBTD.includes=**/*Test.class
