jdev does not need kenai

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -134,7 +134,7 @@ clusters.config.jdev.list=\
         nb.cluster.java,\
         nb.cluster.profiler,\
         nb.cluster.jira,\
-        nb.cluster.team
+        nb.cluster.odcs
 
 clusters.config.bloated.list=\
         nb.cluster.identity,\
