Debugger JShell implemented

--- a/jshell.support/src/org/netbeans/modules/jshell/editor/Bundle.properties
+++ b/jshell.support/src/org/netbeans/modules/jshell/editor/Bundle.properties
@@ -47,3 +47,10 @@ caret-up=Up
 
 jshell-execute=Execute Shell Input
 jshell-reset=Reset JShell
+jshell-save-to-class=Save To Class
+
+ClassNamePanel.jLabel1.text=Package:
+ClassNamePanel.jLabel2.text=Class:
+ClassNamePanel.jLabel3.text=Location:
+ClassNamePanel.className.text=
+ClassNamePanel.message.text=\ 
