--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -666,6 +666,7 @@ nb.cluster.java=\
         junit.ant,\
         junit.ant.ui,\
         junit.ui,\
+        lib.jshell.agent,\
         lib.nbjavac,\
 	lib.nbjshell,\
         libs.cglib,\
