--- a/docker.ui/src/org/netbeans/modules/docker/ui/wizard/Bundle.properties
+++ b/docker.ui/src/org/netbeans/modules/docker/ui/wizard/Bundle.properties
@@ -55,5 +55,4 @@ ConfigurationLinuxPanel.socketLabel.text=&Socket:
 ConfigurationLinuxPanel.socketRadioButton.text=&Unix Socket:
 ConfigurationLinuxPanel.urlRadioButton.text=&TCP Connection
 ConfigurationLinuxPanel.certBrowseButton.text=&Browse...
-DockerConnectionVisual.testButton.text=&Test Connection
-
+DockerConnectionVisual.explanationLabel.text=<html>The docker deamon must be configured to listen on TCP socket. You can do so by starting it with -H tcp://127.0.0.1:2375. See the Docker documentation for reference.</html>
