fixed Bug #258555 Remove old studio alias from tool collection list

--- a/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/Bundle.properties
+++ b/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/Bundle.properties
@@ -1,8 +1,8 @@
 OpenIDE-Module-Display-Category=C/C++
 OpenIDE-Module-Name=C/C++ Tool Collection
-CND/ToolChains/OSS_solaris-sparc=Oracle Solaris Studio
-CND/ToolChains/OSS_solaris-x86_linux=Oracle Solaris Studio
-CND/ToolChains/OSS_linuxCompatGNU=Oracle Solaris Studio in GNU compatibility mode
+CND/ToolChains/OSS_solaris-sparc=Oracle Developer Studio
+CND/ToolChains/OSS_solaris-x86_linux=Oracle Developer Studio
+CND/ToolChains/OSS_linuxCompatGNU=Oracle Developer Studio in GNU compatibility mode
 CND/ToolChains/OSS_5.13_solaris-sparc={Oracle Solaris Studio 12.4}
 CND/ToolChains/OSS_5.13_solaris-x86_linux={Oracle Solaris Studio 12.4}
 CND/ToolChains/OSS_5.13_linuxCompatGNU={Oracle Solaris Studio 12.4} in GNU compatibility mode
@@ -19,8 +19,7 @@ CND/ToolChains/SunStudio_11=Sun Studio 11
 CND/ToolChains/SunStudio_10=Sun Studio 10
 CND/ToolChains/SunStudio_9=Sun Studio 9
 CND/ToolChains/SunStudio_8=Sun Studio 8
-CND/ToolChains/SunStudio=Sun Studio
-CND/ToolChains/OracleSolarisStudio=Oracle Solaris Studio
+CND/ToolChains/OracleDeveloperStudio=Oracle Developer Studio
 CND/ToolChains/Cygwin=GNU Cygwin
 CND/ToolChains/MinGW=GNU MinGW
 CND/ToolChains/MinGW_TDM=GNU MinGW TDM
