--- a/libs.jna.platform/nbproject/project.properties
+++ b/libs.jna.platform/nbproject/project.properties
@@ -42,5 +42,5 @@
 
 is.autoload=true
 javac.source=1.6
-release.external/jna-platform-4.2.1-patched.jar=modules/ext/jna-platform-4.2.1-patched.jar
+release.external/jna-platform-4.2.2.jar=modules/ext/jna-platform-4.2.2.jar
 sigtest.gen.fail.on.error=false
