Implemented Stop in direct and Debug modes

--- a/jshell.support/src/org/netbeans/modules/jshell/editor/Bundle.properties
+++ b/jshell.support/src/org/netbeans/modules/jshell/editor/Bundle.properties
@@ -47,6 +47,7 @@ caret-up=Up
 
 jshell-execute=Execute Shell Input
 jshell-reset=Reset JShell
+jshell-stop=Interrupt exeution
 jshell-save-to-class=Save To Class
 
 ClassNamePanel.jLabel1.text=Package:
@@ -54,3 +55,5 @@ ClassNamePanel.jLabel2.text=Class:
 ClassNamePanel.jLabel3.text=Location:
 ClassNamePanel.className.text=
 ClassNamePanel.message.text=\ 
+ExecutingGlassPanel.jLabel1.text=Executing, please wait...
+ExecutingGlassPanel.stopButton.text=
