--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -481,6 +481,7 @@ nb.cluster.ide=\
         o.eclipse.mylyn.tasks.core,\
         o.eclipse.mylyn.wikitext.confluence.core,\
         o.eclipse.mylyn.wikitext.core,\
+        o.eclipse.mylyn.wikitext.markdown.core,\
         o.eclipse.mylyn.wikitext.textile.core,\
         o.n.swing.dirchooser,\
         o.openidex.util,\
