additional fix for Bug #258328 Start Page component has the a11y issues: - Start page should contain "Add New Remote Host" action. Register the action to expose it in lookup.

--- a/cnd.remote/src/org/netbeans/modules/remote/ui/Bundle.properties
+++ b/cnd.remote/src/org/netbeans/modules/remote/ui/Bundle.properties
@@ -1,5 +1,6 @@
 LBL_HostRootNode=C/C++ Build Hosts
 AddHostMenuItem=&Add New Host...
+AddNewHostAction=Add New Host
 RemoveHostMenuItem=&Remove Host
 RemoveHostCaption=Remove Host
 RemoveHostQuestion=Do you really want to remove {0} from the list?
