--- a/libs.svnClientAdapter.svnkit/nbproject/project.properties
+++ b/libs.svnClientAdapter.svnkit/nbproject/project.properties
@@ -43,10 +43,10 @@
 
 is.eager=true
 javac.source=1.6
-release.external/svnClientAdapter-svnkit-1.10.3.jar=modules/ext/svnClientAdapter-svnkit.jar
-release.external/org.tmatesoft.svnkit_1.8.10.r10446_v20150526_1454.jar=modules/ext/svnkit.jar
+release.external/svnClientAdapter-svnkit-1.10.12.jar=modules/ext/svnClientAdapter-svnkit.jar
+release.external/org.tmatesoft.svnkit_1.8.12.r10533_v20160129_0158.jar=modules/ext/svnkit.jar
 release.external/sqljet-1.1.10.jar=modules/ext/sqljet.jar
-release.external/com.trilead.ssh2_1.0.0.build219_t20150519_2322.jar=modules/ext/trilead.ssh2.jar
+release.external/com.trilead.ssh2_1.0.0.build220_r167_v20150618_1733.jar=modules/ext/trilead.ssh2.jar
 
 sigtest.gen.fail.on.error=false
 
