#243744 - Wrong new line behaviour for namespaces
Patch contributed by junichi11@netbeans.org.

--- a/php.editor/src/org/netbeans/modules/php/editor/indent/ui/Bundle.properties
+++ b/php.editor/src/org/netbeans/modules/php/editor/indent/ui/Bundle.properties
@@ -150,6 +150,7 @@ LBL_spaceAfterTypeCast=After Type Cast
 LBL_spaceCheckAfterKeywords=After Keywords
 LBL_spaceAfterShortPHPTag=After Short PHP Tag
 LBL_spaceBeforeClosePHPTag=Before Close PHP Tag
+LBL_spaceBetweenOpenPHPTagAndNamespace=Between Open PHP Tag and Namespace
 
 LBL_bp_If="&if", "else", "elseif"
 LBL_bp_FOR="&for", "foreach"
