Maven support added, refactored

--- a/maven/src/org/netbeans/modules/maven/customizer/Bundle.properties
+++ b/maven/src/org/netbeans/modules/maven/customizer/Bundle.properties
@@ -169,3 +169,4 @@ ActionMappings.jButton1.text=Show in Toolbar
 RunJarPanel.txtVMOptions.AccessibleContext.accessibleDescription=VM options
 RunJarPanel.customizeOptionsButton.text=C&ustomize...
 RunJarPanel.wrapCheckBox.text=Wrap text
+TIT_Run=Run
