--- a/cnd.script/src/org/netbeans/modules/cnd/makefile/wizard/Bundle.properties
+++ b/cnd.script/src/org/netbeans/modules/cnd/makefile/wizard/Bundle.properties
@@ -142,9 +142,9 @@ MNEM_OptMsg=O
 
 # PlatformTypePanel
 LBL_PlatformTypePanel=Select Makefile Type and Platform
-TXT_PlatformTypeMsg1=Oracle Solaris Studio's compilers differ in a number of ways from GNU's. This wizard can create a makefile that is compatible with either Oracle Solaris Studio's compiler set or with GNU's compiler set.
+TXT_PlatformTypeMsg1=Oracle Developer Studio's compilers differ in a number of ways from GNU's. This wizard can create a makefile that is compatible with either Oracle Developer Studio's compiler set or with GNU's compiler set.
 LBL_CompilerType=Select the compiler set to use:
-RB_CompilerTypeSun=Oracle Solaris Studio Compilers
+RB_CompilerTypeSun=Oracle Developer Studio Compilers
 MNEM_CompilerTypeSun=S
 RB_CompilerTypeGNU=GNU Compilers
 MNEM_CompilerTypeGNU=G
@@ -161,8 +161,8 @@ TXT_PlatformTypeMsg2=Linker flags and system libraries differ on each platform.
 
 # CompilerTypePanel and PlatformTypePanel
 LBL_CompilerTypePanel=Select Makefile Type
-TXT_CompilerTypeMsg1=Oracle Solaris Studio's make utility and compilers differ in a number of ways from GNU's. This wizard can create a makefile that is compatible with either Oracle Solaris Studio's toolset or GNU's toolset (make utility and compilers), or it can create a generic and slightly more complex makefile that works with both toolsets.
-RB_CompilerTypeBoth=Oracle Solaris Studio and GNU Compilers
+TXT_CompilerTypeMsg1=Oracle Developer Studio's make utility and compilers differ in a number of ways from GNU's. This wizard can create a makefile that is compatible with either Oracle Developer Studio's toolset or GNU's toolset (make utility and compilers), or it can create a generic and slightly more complex makefile that works with both toolsets.
+RB_CompilerTypeBoth=Oracle Developer Studio and GNU Compilers
 MNEM_CompilerTypeBoth=a
 TXT_CompilerTypeMsg2=
 
@@ -214,7 +214,7 @@ TB_GenLib=Pattern Matching and Pathname Manipulation (-lgen)
 TB_DynamicLib=Dynamic Linking (-ldl)
 TB_Curses=Curses: CRT Screen Handling (-lcurses)
 TB_RWTools=RW Tools++ (-library=rwtools7,iostream)
-TB_PerfLib=Oracle Solaris Studio Performance Library (-xlic_lib=sunperf)
+TB_PerfLib=Oracle Developer Studio Performance Library (-xlic_lib=sunperf)
 MNEM_Motif=X
 MNEM_Math=M
 MNEM_Nsl=N
@@ -358,7 +358,7 @@ click Cancel to close the New Makefile wizard without creating a Makefile.
 # MakefileGenerator Makefile text
 MFG_User=## User: 
 MFG_Time=## Time: 
-MFG_CreateMsg=## Makefile created by Oracle Solaris Studio.\n
+MFG_CreateMsg=## Makefile created by Oracle Developer Studio.\n
 MFG_DoNotEditMsg=## This file is generated automatically.\n
 MFG_TargetDirectories=# Define the target directories.\n
 MFG_Target=## Target: 
