fixed Bug #258644 Update references on Oracle Solaris Studio

--- a/cnd.discovery/src/org/netbeans/modules/cnd/discovery/projectimport/Bundle.properties
+++ b/cnd.discovery/src/org/netbeans/modules/cnd/discovery/projectimport/Bundle.properties
@@ -95,7 +95,7 @@ CLEAN_REMOTE_LABEL=Clean - {0}
 BUILD_LABEL=Build
 BUILD_REMOTE_LABEL=Build - {0}
 
-ERROR_FIND_PROJECT_CREATOR=Cannot find Oracle Solaris Studio 12.3 or later on host {0}.
-ERROR_RUN_PROJECT_CREATOR=Cannot run Oracle Solaris Studio 12.3 or later on host {0}.
+ERROR_FIND_PROJECT_CREATOR=Cannot find Oracle Solaris Studio (version 12.3 or later) or Oracle Developer Studio on host {0}.
+ERROR_RUN_PROJECT_CREATOR=Cannot run Oracle Solaris Studio (version 12.3 or later) or Oracle Developer Studio on host {0}.
 RUN_PROJECT_CREATOR=Creating project on host {0}...
 CONFIGURING_PROJECT_CREATOR=Configuring project on host {0}...
