--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/Bundle.properties
@@ -462,7 +462,7 @@ DefaultProjectFolder=NetBeansProjects
 MSG_LocalProjectAlreadyExists=Local Project {0} already exists
 SelectBinaryPanelVisual.cancelSearch.text=St&op Search
 
-ERROR_FIND_PROJECT_CREATOR=Remote project creation requires Oracle Solaris Studio 12.3 or later on host {0}.
+ERROR_FIND_PROJECT_CREATOR=Remote project creation requires Oracle Solaris Studio (version 12.3 or later) or Oracle Developer Studio on host {0}.
 PanelProjectLocationVisual.Validating_Wizard=Validating...
 
 SERVICE_NOT_AVALIABLE=Cannot create project\nbecause not all C/C++ modules were loaded.\nPlease, try to (re)activate C/C++ feature\nvia Tools > Plugins.
