--- a/cnd.remote.projectui/src/org/netbeans/modules/cnd/remote/projectui/wizard/cnd/Bundle.properties
+++ b/cnd.remote.projectui/src/org/netbeans/modules/cnd/remote/projectui/wizard/cnd/Bundle.properties
@@ -91,8 +91,8 @@ SAMPLE_PROJECT_ACSD=Creates New Sample Project
 # NewMakeProjectWizardIterator
 LAB_IteratorName={0} of {1}
 
-ERROR_FIND_PROJECT_CREATOR=Cannot find Oracle Solaris Studio 12.3 or later on host {0}.
-ERROR_RUN_PROJECT_CREATOR=Cannot run Oracle Solaris Studio 12.3 or later on host {0}:\n{1}.
+ERROR_FIND_PROJECT_CREATOR=Cannot find Oracle Solaris Studio (version 12.3 or later) or Oracle Developer Studio on host {0}.
+ERROR_RUN_PROJECT_CREATOR=Cannot run Oracle Solaris Studio (version 12.3 or later) or Oracle Developer Studio on host {0}:\n{1}.
 RUN_PROJECT_CREATOR=Creating project on host {0}...
 CONFIGURING_PROJECT_CREATOR=Configuring project on host {0}...
 
