--- a/lib.jshell.agent/nbproject/project.properties
+++ b/lib.jshell.agent/nbproject/project.properties
@@ -3,3 +3,4 @@ javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
 extra.module.files=modules/ext/nb-custom-jshell-agent.jar
 
+agentsrc.asm.cp=${core.startup.dir}/core/asm-all-5.0.1.jar
