Renamed JShell to Java Shell. Improvements in generate class from jshell log

--- a/jshell.support/src/org/netbeans/modules/jshell/resources/Bundle.properties
+++ b/jshell.support/src/org/netbeans/modules/jshell/resources/Bundle.properties
@@ -43,7 +43,7 @@ delimiter=Message delimiter
 message=Message Text
 mark-error=Error Marker
 java=Java Command
-command=JShell Command
+command=Java Shell Command
 command-text=Command Parameters
 error=Error
 output=Command Output
