--- a/jshell.support/src/org/netbeans/modules/jshell/editor/Bundle.properties
+++ b/jshell.support/src/org/netbeans/modules/jshell/editor/Bundle.properties
@@ -46,7 +46,7 @@ caret-line-first-column=
 caret-up=Up
 
 jshell-execute=Execute Shell Input
-jshell-reset=Reset JShell
+jshell-reset=Reset Java Shell
 jshell-stop=Interrupt exeution
 jshell-save-to-class=Save To Class
 
