Bold template expression delimiter.

--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/resources/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/resources/Bundle.properties
@@ -60,6 +60,7 @@ mod-global=Global Variable
 mod-method=Method
 mod-class=Class
 mod-regexp=Regular Expression
+mod-templateexp=Template Expression
 mod-unused=Unused Element
 mod-field=Field
 mod-local-variable-declaration=Local Variable Declaration
