Unit tests paths project problem for cp <-> mp transitions.

--- a/java.j2seproject/src/org/netbeans/modules/java/j2seproject/problems/Bundle.properties
+++ b/java.j2seproject/src/org/netbeans/modules/java/j2seproject/problems/Bundle.properties
@@ -54,3 +54,18 @@ LBL_DowngradeSourceLevel=Change Project Source Level to {0} {1}
 MNE_DowngradeSourceLevel=C
 ResolveBrokenRuntimePlatform.jLabel2.text=&Platforms:
 ResolveBrokenRuntimePlatform.sourceLevelWarning.text=Warning: Decreasing source level or profile may cause project to be uncompilable.
+
+#ModulePathsProblemsProvider
+TXT_InvalidModulePaths=Invalid Test Module Paths
+DESC_InvalidModulePaths=The Test Module Paths correspond to non-modular sources but there is module-info.java in the project sources.\n\
+  In such a project configuration unit tests may not compile or execute.
+TXT_InvalidClassPaths=Invalid Test Class Paths
+DESC_InvalidClassPaths=The Test Class Paths correspond to modular sources but there is no module-info.java in the project sources.\n\
+  In such a project configuration unit tests may not compile or execute.
+TXT_Update=Update Paths
+TXT_Ignore=Keep Paths
+TITLE_FixPaths=Update Paths
+#{0} -
+MSG_FixPaths=Update Unit Test Paths to default {0} value?
+MSG_Modular=modular
+MSG_NonModular=non-modular
