--- a/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/Bundle.properties
+++ b/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/Bundle.properties
@@ -421,8 +421,8 @@ MNE_UpTestRoot=p
 
 MNE_DownTestRoot=w
 
-
-LBL_CustomizeLibraries_Modules_Tab=Module
+LBL_CustomizeLibraries_Modulepath_Tab=Modulepath
+LBL_CustomizeLibraries_Classpath_Tab=Classpath
 
 LBL_CustomizeLibraries_LibrariesTab=Compile
 
@@ -446,9 +446,13 @@ LBL_CustomizeLibraries_RtOnlyDesc_JLabel=<HTML>RT Only - select if the library i
 
 LBL_CustomizeLibraries_LibrariesM_JLabel=Compile-&time Modules:
 LBL_CustomizeLibraries_LibrariesC_JLabel=Compile-&time Libraries\:
+LBL_CustomizeLibraries_LibrariesMP_JLabel=Pr&ocessor-path Modules\:
 LBL_CustomizeLibraries_LibrariesP_JLabel=Pr&ocessor-path Libraries\:
+LBL_CustomizeLibraries_LibrariesMR_JLabel=Run-&time Modules\:
 LBL_CustomizeLibraries_LibrariesR_JLabel=Run-&time Libraries\:
+LBL_CustomizeLibraries_LibrariesMT_JLabel=Compile-&time Test Modules\:
 LBL_CustomizeLibraries_LibrariesCT_JLabel=Compile-&time Test Libraries\:
+LBL_CustomizeLibraries_LibrariesMRT_JLabel=Run-&time Test Modules\:
 LBL_CustomizeLibraries_LibrariesRT_JLabel=Run-&time Test Libraries\:
 LBL_CustomizeLibraries_Libraries_Error=Some library items cannot be located. Use the Reference Problems dialog.
 
